[package]
name = "actix-warp-subconverter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
serde_urlencoded = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.120"
rand = "0.8.5"
ipnetwork = "0.20.0"
base64 = "0.13"
urlencoding = "2.1.3"
regex = "1.10.5"
encoding = "0.2.33"
local-ip-address = "0.6.1"